changed version to 1.8