@@ -12,6 +12,7 @@ import java.io.PrintStream;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -29,7 +30,7 @@ public class Parser {
 	public Dict parse(File file) throws IOException {
 		String unzippedFilename = File.createTempFile(file.getName(), ".tmp").getAbsolutePath();
 		File unzippedFile = new File(unzippedFilename);
-		Files.deleteIfExists(Path.of(unzippedFilename));
+		Files.deleteIfExists(Paths.get(unzippedFilename));
 		unzipBglFile(file, unzippedFile);
 		return parseUnzippedFile(unzippedFile);
 	}
